syntax = "proto3";

package config;

message FrontendConfig {
  // The version of this buildbuddy instance.
  string version = 1;

  // The issuers configured by the backend.
  repeated string configured_issuers = 2;

  // True if the backend supports requests for assistance.
  bool assistance_enabled = 3;
}
